--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -640,7 +640,7 @@
                                     </li>
                                     <li>
                                         <strong>Email: </strong>
-                                        <a href="mjataabednego@gmail.com">info@validtheme.com</a>
+                                        <a href="mjataabednego@gmail.com">PostHarvest_Tz@gmail.com</a>
                                     </li>
                                     <li>
                                         <strong>Phone: </strong>
