--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -403,11 +403,11 @@
                                 <ul>
                                     <li>
                                         <strong>Address: </strong>
-                                        5919 Trussville Crossings Pkwy, Birmingham AL 35235
+                                        Shaban robert street posta Dar es salaam
                                     </li>
                                     <li>
                                         <strong>Email: </strong>
-                                        <a href="mailto:info@validtheme.com">info@validtheme.com</a>
+                                        <a href="PostHarvest_Tz@gmail.com">PostHarvest_Tz@gmail.com/a>
                                     </li>
                                     <li>
                                         <strong>Phone: </strong>
@@ -440,30 +440,6 @@
                 </div>
             </div>
         </div>
-        <!-- Start Footer Bottom -->
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>Copyright &copy;  2021. Designed by <a href="#">validthemes</a></p>
-                    </div>
-                    <div class="col-md-6 text-right link">
-                        <ul>
-                            <li>
-                                <a href="#">Terms</a>
-                            </li>
-                            <li>
-                                <a href="#">Privacy</a>
-                            </li>
-                            <li>
-                                <a href="#">Support</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Footer Bottom -->
     </footer>
     <!-- End Footer -->
 
