--- a/industries.html
+++ b/industries.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -160,7 +160,7 @@
 
     <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark bg-fixed text-light" style="background-image: url(assets/img/services/31.jpg);">
+    <div class="breadcrumb-area text-center shadow dark bg-fixed text-light" style="background-image: url(assets/img/services/25.jpg);">
         <div class="container text-dark">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -504,15 +504,15 @@
                                 <ul>
                                     <li>
                                         <strong>Address: </strong>
-                                        5919 Trussville Crossings Pkwy, Birmingham AL 35235
+                                        Shaban robert street posta Dar es salaam
                                     </li>
                                     <li>
                                         <strong>Email: </strong>
-                                        <a href="mailto:info@validtheme.com">info@validtheme.com</a>
+                                        <a href="mailto:info@validtheme.com">PostHarvest_Tz@gmail.com</a>
                                     </li>
                                     <li>
                                         <strong>Phone: </strong>
-                                        <a href="#"> +123 456 7890</a>
+                                        <a href="#"> +255 713 348149</a>
                                     </li>
                                 </ul>
                             </div>
