--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -589,11 +589,11 @@
                                     </li>
                                     <li>
                                         <strong>Email: </strong>
-                                        <a href="mailto:info@validtheme.com">PostHarvest_Tz@gmail.com</a>
+                                        <a href="PostHarvest_Tz@gmail.com">PostHarvest_Tz@gmail.com</a>
                                     </li>
                                     <li>
                                         <strong>Phone: </strong>
-                                        <a href="#">+255713348149</a>
+                                        <a href="#">+255 7133 48149</a>
                                     </li>
                                 </ul>
                             </div>
