--- a/blog-with-sidebar.html
+++ b/blog-with-sidebar.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -44,57 +44,6 @@
     <!-- Preloader Start -->
     <div class="se-pre-con"></div>
     <!-- Preloader Ends -->
-
-    <!-- Start Header Top 
-    ============================================= -->
-    <div class="top-bar-area bg-dark text-light inc-pad inc-shape">
-        <div class="container">
-            <div class="row align-center">
-                <div class="col-lg-9">
-                    <div class="flex-item left">
-                        <p>
-                            That's right, we only sell 100% organic
-                        </p>
-                        <ul>
-                            <li>
-                                <i class="fas fa-map-marker-alt"></i> California, TX 70240
-                            </li>
-                            <li>
-                                <i class="fas fa-envelope-open"></i> Info@gmail.com
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 text-right">
-                    <div class="social">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Header Top -->
 
     <!-- Header 
     ============================================= -->
@@ -623,15 +572,15 @@
                                 <ul>
                                     <li>
                                         <strong>Address: </strong>
-                                        5919 Trussville Crossings Pkwy, Birmingham AL 35235
+                                        Shaban robert street posta Dar es salaam
                                     </li>
                                     <li>
                                         <strong>Email: </strong>
-                                        <a href="mailto:info@validtheme.com">info@validtheme.com</a>
+                                        <a href="PostHarvest_Tz@gmail.com">PostHarvest_Tz@gmail.com</a>
                                     </li>
                                     <li>
                                         <strong>Phone: </strong>
-                                        <a href="#"> +123 456 7890</a>
+                                        <a href="#"> +255 7133 481 49</a>
                                     </li>
                                 </ul>
                             </div>
@@ -660,30 +609,7 @@
                 </div>
             </div>
         </div>
-        <!-- Start Footer Bottom -->
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>Copyright &copy;  2021. Designed by <a href="#">validthemes</a></p>
-                    </div>
-                    <div class="col-md-6 text-right link">
-                        <ul>
-                            <li>
-                                <a href="#">Terms</a>
-                            </li>
-                            <li>
-                                <a href="#">Privacy</a>
-                            </li>
-                            <li>
-                                <a href="#">Support</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Footer Bottom -->
+       
     </footer>
     <!-- End Footer -->
 
