--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
