--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>PostHarvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -990,7 +990,7 @@
                                     </li>
                                     <li>
                                         <strong>Phone: </strong>
-                                        <a href="#"> +255 713348149</a>
+                                        <a href="#"> +255 7133 481 49</a>
                                     </li>
                                 </ul>
                             </div>
