--- a/postharvest.html
+++ b/postharvest.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Farmi - Organic Farm Agriculture Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Farmi - Organic Farm Agriculture Template</title>
+    <title>Postharvest_finalyrProject</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -431,15 +431,15 @@
                                 <ul>
                                     <li>
                                         <strong>Address: </strong>
-                                        5919 Trussville Crossings Pkwy, Birmingham AL 35235
+                                        Shaban robert street posta Dar es salaam
                                     </li>
                                     <li>
                                         <strong>Email: </strong>
-                                        <a href="mailto:info@validtheme.com">info@validtheme.com</a>
+                                        <a href="PostHarvest_Tz@gmail.com">PostHarvest_Tz@gmail.com</a>
                                     </li>
                                     <li>
                                         <strong>Phone: </strong>
-                                        <a href="#"> +123 456 7890</a>
+                                        <a href="#">+255 7133 48149</a>
                                     </li>
                                 </ul>
                             </div>
